<resources>
    <string name="app_name">AdMove</string>

    <string name="facebook_app_id">181154708936062</string>
    <string name="google_cloud_messaging_package">com.admove.android</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_title_media">Media</string>
    <string name="menu_title_communicate">Communicate</string>

    <string name="action_settings">Settings</string>

    <string name="menu_action_home">Home</string>
    <string name="menu_action_map">History</string>
    <string name="menu_action_tools">Manage</string>
    <string name="menu_action_import">Import</string>
    <string name="menu_action_gallery">Gallery</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_action_inbox">Inbox</string>
    <string name="title_activity_map">MapActivity</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- SharedPreferences -->
    <string name="location_listener_status">Location listener status</string>

    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">Create New Account</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_or">or sign in with</string>
    <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="content_helper_error_title">No Content Viewer</string>
    <string name="content_helper_error_no_app">No Viewing App exists for content type \'%s\'.</string>
    <string name="menu_logout">Logout</string>
    <string name="facebook_button_content_description">Login with Facebook</string>
    <string name="google_button_content_description">Login with Google+</string>

</resources>
