<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mysampleapp.SignInActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signIn_editText_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:hint="@string/sign_in_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signIn_editText_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:hint="@string/sign_in_password"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/signIn_imageButton_login"
            android:layout_width="@dimen/sign_in_button_width"
            android:layout_height="@dimen/sign_in_button_height"
            android:layout_margin="@dimen/sign_in_button_margin"
            android:onClick="signInAction"
            android:src="@drawable/selector_button_login" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signIn_textView_CreateNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sign_in_text_margin"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/sign_in_new_account"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                android:id="@+id/signIn_textView_ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/sign_in_text_margin"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/sign_in_forgot_password"
                android:textAppearance="?android:textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="@dimen/sign_in_separator_height"
                android:layout_gravity="left|center_vertical"
                android:background="@color/sign_in_separator_color"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/sign_in_or"
                android:textAppearance="?android:textAppearanceSmall" />

            <View
                android:layout_width="100dp"
                android:layout_height="@dimen/sign_in_separator_height"
                android:layout_gravity="right|center_vertical"
                android:background="@color/sign_in_separator_color"
                android:gravity="center_vertical"
                android:padding="5dp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/fb_login_button"
            android:layout_width="@dimen/sign_in_button_width"
            android:layout_height="@dimen/sign_in_button_height"
            android:layout_marginBottom="@dimen/sign_in_button_margin"
            android:layout_marginTop="@dimen/sign_in_button_margin"
            android:contentDescription="@string/facebook_button_content_description"
            android:padding="0dp"
            android:src="@drawable/selector_button_facebook" />

        <ImageButton
            android:id="@+id/g_login_button"
            android:layout_width="@dimen/sign_in_button_width"
            android:layout_height="@dimen/sign_in_button_height"
            android:layout_marginBottom="@dimen/sign_in_button_margin"
            android:layout_marginTop="@dimen/sign_in_button_margin"
            android:contentDescription="@string/google_button_content_description"
            android:padding="0dp"
            android:src="@drawable/selector_button_google" />
    </LinearLayout>
</RelativeLayout>
